--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "CBraMod"]
 	path = CBraMod
 	url = https://github.com/wjq-learning/CBraMod.git
+    ignore = untracked
 [submodule "pretrained_weights"]
 	path = pretrained_weights
 	url = https://huggingface.co/weighting666/CBraMod
+    ignore = untracked
