--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "einops>=0.8.1",
     "h5netcdf>=1.6.1",
     "h5py>=3.13.0",
+    "ipykernel>=6.29.5",
+    "keras>=3.9.2",
     "lmdb>=1.6.2",
     "matplotlib>=3.10.1",
     "mne>=1.9.0",
